1.0.2 Release (#12)
* correct grid snap

* add clojure.data.csv deps

* alter chips query acquired parameter to be inclusive/exclusive